
** Added

- =vui-quit= command bound to =q=: Quits window when outside widget fields, self-inserts when inside (so you can type "q" in text inputs).
- =vui-refresh= command bound to =g=: Re-renders the UI with current state when outside widget fields, self-inserts when inside. Applications needing custom refresh logic (e.g., re-fetching data) can override in their derived mode.

* v1.0.0 - 2025-12-28

** Breaking Changes

- *Symbol Prefix Rename*: All public macros now use the =vui-= prefix to comply with MELPA naming conventions:
  - =defcomponent= → =vui-defcomponent=
  - =defcontext= → =vui-defcontext=
  - =use-effect= → =vui-use-effect=
  - =use-ref= → =vui-use-ref=
  - =use-callback= → =vui-use-callback=
  - =use-callback*= → =vui-use-callback*=
  - =use-memo= → =vui-use-memo=
  - =use-memo*= → =vui-use-memo*=
  - =use-async= → =vui-use-async=

  See the README section "Using Shorter Names (Shorthands)" for how to use aliases or =read-symbol-shorthands= if you prefer the shorter names.

* v1.0.0-rc.3 - 2025-12-20

** Added

- =vui-mode= major mode for VUI buffers. Provides =vui-mode-map= that users and packages can extend (e.g., for =ace-link=). Packages using VUI can derive their own modes from =vui-mode= to add custom keybindings while preserving VUI and widget functionality.
- Documentation of Emacs 29 single-widget TAB navigation limitation (upstream [[https://debbugs.gnu.org/cgi/bugreport.cgi?bug=70594][bug#70594]], fixed in Emacs 30).

** Fixed

- =vui-table= now respects =:indent= from parent =vui-vstack=. Previously, only the first line of a table was indented; now all lines are properly indented.
- Cursor preservation now uses path-based widget tracking instead of index-based. Cursor correctly follows widgets when other widgets are added or removed before them. Previously, adding a widget above the cursor position would cause the cursor to land on the wrong widget after re-render.

** Changed
